--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2"
   },
+  "proxy": "http://localhost:3000",
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -33,4 +36,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
