--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "10.0x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.1"
