--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "mdbreact": "^4.20.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
@@ -12,8 +13,6 @@
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2"
   },
-  
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -35,5 +34,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
